<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:src="@drawable/back"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        />

    <ImageView
        android:id="@+id/iv_doctorimg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/detalis"
        android:layout_marginTop="130dp"
        />
    <TextView
        android:id="@+id/tv_doctorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctorName"
        android:layout_below="@+id/iv_doctorimg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        />
    <TextView
        android:id="@+id/tv_specializeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specializeName"
        android:layout_below="@+id/tv_doctorName"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:textColor="@color/blue"
        />
    <RatingBar
        android:id="@+id/rb_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_specializeName"
        android:rating="3.5"
        android:progressTint="@color/yellow"
        />
    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Overview"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:layout_below="@id/rb_rating"
        />
    <TextView
        android:id="@+id/tv_parOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paroverview"
        android:textColor="@color/textparagrah"
        android:layout_below="@+id/tv_overview"
        android:layout_marginTop="10dp"
        android:textSize="14dp"

        />
    <TextView
        android:id="@+id/tv_worktime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/worktime"
        android:layout_below="@+id/tv_parOverview"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/tv_timedetalies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timedetalies"
        android:layout_below="@+id/tv_worktime"
        android:layout_marginTop="10dp"
        android:textColor="@color/textparagrah"
        android:textSize="14dp"
        />

    <Button
        android:id="@+id/btn_booknow"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/booknow"
        android:textSize="18sp"
        android:clickable="true"
        android:backgroundTint="@color/blue"
        android:layout_below="@+id/tv_timedetalies"
        android:layout_marginTop="45dp"
        />
</RelativeLayout>