<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fragments.EditProfile_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <FrameLayout
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:layout_height="120dp">
        <ImageView
            android:id="@+id/iv_edit_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circle_user"
            android:padding="25dp"
            android:src="@drawable/useredit"
            />

        <ImageView
            android:id="@+id/iv_edit_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/edit"
            android:padding="10dp"
            android:background="@drawable/circle_edit"
            android:layout_gravity="bottom|right"
            />
    </FrameLayout>

    <EditText
        android:id="@+id/et_Fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fullName"
        android:drawableEnd="@drawable/profile"
        android:textColorHint="@color/gray"
        android:inputType="text"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:backgroundTint="@color/green"
        android:layout_below="@id/tv_welcom"
        />


    <EditText
        android:id="@+id/et_emailAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:drawableEnd="@drawable/email"
        android:textColorHint="@color/gray"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:backgroundTint="@color/green"
        android:layout_below="@id/tv_welcom"
        />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:drawableEnd="@drawable/call"
        android:textColorHint="@color/gray"
        android:inputType="phone"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:backgroundTint="@color/green"
        android:layout_below="@id/tv_welcom"
        />
    <TextView
        android:id="@+id/et_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="40dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbtn_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Female"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                />
            <RadioButton
                android:id="@+id/rbtn_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Male"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btn_saveChange"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue"
        android:focusable="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/save"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>
