<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rv_item"
    android:background="@drawable/border"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/iv_doctorimg"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:scaleType="centerCrop"
        android:src="@drawable/top1"
        />
    <TextView
        android:id="@+id/tv_doctorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctorName"
        android:textSize="13dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/iv_doctorimg"
        />
    <TextView
        android:id="@+id/tv_specializeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specializeName"
        android:textColor="@color/textparagrah"
        android:textSize="10sp"
        android:layout_toRightOf="@+id/iv_doctorimg"
        android:fontFamily="sans-serif-medium"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar"
            />

        <TextView
            android:id="@+id/tv_datetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="8sp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/textparagrah"
            />

        <ImageView
            android:id="@+id/iv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:src="@drawable/timer"
            />

        <TextView
            android:id="@+id/tv_timetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="8sp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/textparagrah"
            />


        <ImageView
            android:id="@+id/iv_state"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="6dp"
            android:src="@drawable/state"
            />

        <TextView
            android:id="@+id/tv_statetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textSize="8sp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/textparagrah"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/blue"
        android:layout_below="@+id/iv_doctorimg"
        android:text="@string/cancle"
        />

</RelativeLayout>