<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/user"
        />

    <LinearLayout
        android:id="@+id/liner_headerNmae"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="48dp">

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/hello"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_myname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myname"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/textparagrah"
            android:textSize="9sp"
            />
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_notification"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/notification"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="48dp"
        />

    <TextView
        android:id="@+id/tv_specialize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Specializations"
        android:layout_alignParentLeft="true"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="@color/gray"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@+id/iv_user"
        />
    <TextView
        android:id="@+id/tv_seeAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seeall"
        android:textSize="10sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@+id/tv_specialize"

        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_specialize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_specialize"
        />

    <TextView
        android:id="@+id/ArticlesTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ArticlesTips"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/rv_specialize"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/gray"
        android:textSize="14sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/rv_specialize"
        />
    <TextView
        android:id="@+id/Top_caregivers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Top_caregivers"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/rv_tips"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/gray"
        android:textSize="14sp"
        />
    <ImageView
        android:id="@+id/iv_top1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/top1"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/Top_caregivers"
        />
    <ImageView
        android:id="@+id/iv_top2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/top2"
        android:layout_below="@+id/iv_top1"
        android:layout_marginTop="10dp"
        />
    <ImageView
        android:id="@+id/iv_top3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/Top_caregivers"
        android:layout_alignParentEnd="true"
        android:src="@drawable/top3"
        />
    <ImageView
        android:id="@+id/iv_top4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/iv_top3"
        android:layout_alignParentEnd="true"
        android:src="@drawable/detalis"
        />
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        app:itemIconTint="@color/gray"
        app:itemIconSize="25dp"
        app:backgroundTint="@color/white"
        app:itemPaddingBottom="10dp"
        app:itemRippleColor="@color/blue"
        app:itemActiveIndicatorStyle="@null"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_bar"/>
</RelativeLayout>
